appspec changes for authserver

--- a/authentication-server/appspec.yaml
+++ b/authentication-server/appspec.yaml
@@ -3,8 +3,8 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:us-east-1:183686979203:task-definition/aws-hello-world-rest-api:1"
+        TaskDefinition: "arn:aws:ecs:ap-south-1:860061945305:task-definition/pms-authentication-server-SP:1"
         LoadBalancerInfo:
-          ContainerName: "aws-hello-world-rest-api"
-          ContainerPort: "80"
+          ContainerName: "pms-authentication-server-SP"
+          ContainerPort: "8085"
         PlatformVersion: "LATEST"
